syntax = "proto3";
package pb;

message record {
    int64  id = 1;
    int64  wid = 2;
    int64  wuid = 3;
    string type = 4;
    string content = 5;
    int64  created_at = 6;
}

message record_list {
    int64 index = 1;
    int64 limit = 2;
    int64 total = 3;
    repeated record records = 4;
}